@@ -1,0 +1,24 @@
+PREHOOK: query: DROP TABLE tmp_pyang_bucket3
+PREHOOK: type: DROPTABLE
+POSTHOOK: query: DROP TABLE tmp_pyang_bucket3
+POSTHOOK: type: DROPTABLE
+PREHOOK: query: CREATE TABLE tmp_pyang_bucket3 (userId INT) CLUSTERED BY (userid) INTO 32 BUCKETS
+PREHOOK: type: CREATETABLE
+POSTHOOK: query: CREATE TABLE tmp_pyang_bucket3 (userId INT) CLUSTERED BY (userid) INTO 32 BUCKETS
+POSTHOOK: type: CREATETABLE
+POSTHOOK: Output: default@tmp_pyang_bucket3
+PREHOOK: query: DROP TABLE tmp_pyang_bucket3
+PREHOOK: type: DROPTABLE
+POSTHOOK: query: DROP TABLE tmp_pyang_bucket3
+POSTHOOK: type: DROPTABLE
+POSTHOOK: Output: default@tmp_pyang_bucket3
+PREHOOK: query: CREATE TABLE tmp_pyang_bucket3 (userId INT) CLUSTERED BY (userid) SORTED BY (USERID) INTO 32 BUCKETS
+PREHOOK: type: CREATETABLE
+POSTHOOK: query: CREATE TABLE tmp_pyang_bucket3 (userId INT) CLUSTERED BY (userid) SORTED BY (USERID) INTO 32 BUCKETS
+POSTHOOK: type: CREATETABLE
+POSTHOOK: Output: default@tmp_pyang_bucket3
+PREHOOK: query: DROP TABLE tmp_pyang_bucket3
+PREHOOK: type: DROPTABLE
+POSTHOOK: query: DROP TABLE tmp_pyang_bucket3
+POSTHOOK: type: DROPTABLE
+POSTHOOK: Output: default@tmp_pyang_bucket3
